# carrion-eris

./: .env  .gitignore  Cargo.toml  README.md  TODO.md  build.rs  data.lua  des.lua  descriptions.json  eris.db  history.txt  map.json  nexthink.code-profile  test.db
.github/workflows/: check.yaml  sarif.yml  scheduled.yaml
carrion-patterns/: Cargo.toml
carrion-patterns/src/: command.rs  fsm.rs  lib.rs
ce.db/: 000035.sst  000051.sst  000189.sst  000258.sst  000261.sst  000266.sst  000515.sst  000614.sst  000617.sst  000626.sst  000631.sst  000634.sst  000637.sst  000642.sst  000749.sst  000864.sst  000867.sst  000872.sst  IDENTITY  LOG  LOG.old.1694784336850601  LOG.old.1695031423271327  LOG.old.1695031436199013  LOG.old.1695031524827793  LOG.old.1695031923110947  LOG.old.1695032006333291  LOG.old.1695042173409696  LOG.old.1695043883910492  LOG.old.1695046368816055  LOG.old.1695046708361159  LOG.old.1695048351716357  LOG.old.1695049201676095  LOG.old.1695049324395043  LOG.old.1695049424819265  LOG.old.1695049762154916  LOG.old.1695049856030433  LOG.old.1695050035568212  LOG.old.1695050940260093  LOG.old.1695051086591263  LOG.old.1695051179940350  (+250 more)
eris-macro/: Cargo.toml
eris-macro/src/: items.rs  lib.rs  mob_actions.rs  player_actions.rs
items/: amulet_of_arcane_ascendance.yaml  arcane_reliquary_of_power.yaml  asgardian_aegis.yaml  boots_of_elemental_mastery.yaml  colossus_slayer_heartstone.yaml  dragon_scale_armor.yaml  helm_of_the_dwarf_betrayer.yaml  infero_staff.yaml  legguards_of_aegis.yaml  memeweave.yaml  prismari_primer.yaml  ring_of_arcane_mastery.yaml  ring_of_battle_prowess.yaml  ring_of_resillient_fortitude.yaml  stone_of_strength.yaml  sword_of_asbethath.yaml  unyielding_onyx_assault_ring.yaml  veil_of_eternal_dreams.yaml  venomweave_gloves.yaml  wand_of_abyssal_desolation.yaml
items/amulets/: amulet_of_arcane_ascendance.yaml
items/armors/: dragon_scale_armor.yaml
items/boots/: boots_of_elemental_mastery.yaml
items/gloves/: venomweave_gloves.yaml
items/helms/: helm_of_the_dwarf_betrayer.yaml
items/legs/: legguards_of_aegis.yaml
items/rings/: unyielding_onyx_assault_ring.yaml
items/shields/: asgardian_aegis.yaml
items/weapons/: infero_staff.yaml  sword_of_asbethath.yaml  wand_of_abyssal_desolation.yaml
items/wonders/: arcane_reliquary_of_power.yaml  veil_of_eternal_dreams.yaml
src/: battle.rs  character.rs  class.rs  classes.rs  command.rs  commands.rs  constructed.rs  damage.rs  dice.rs  enemies.rs  enemy.rs  game_loop.rs  item.rs  items.rs  lib.rs  mutators.rs  player.rs  skill.rs  skills.rs  trait.rs  traits.rs  unit.rs  units.rs
src/database/: mod.rs  surreal.rs
src/database/mock/: consumer.rs  mod.rs  producer.rs
src/database/surreal/: consumer.rs  producer.rs
src/game/: buffer.rs  character_data.rs  cli_game.rs  data.rs  fsm.rs  gamesync.rs  mod.rs  mutations.rs
src/game/cli/: commands.rs  game_loop.rs  locations.rs  mod.rs  states.rs
src/item_templates/: mod.rs
src/items/: mod.rs
src/ui/: cli.rs
static-config/: Cargo.toml
static-config/src/: lib.rs
testing.db/: 000029.sst  000032.sst  IDENTITY  LOG  LOG.old.1695926974737809  LOG.old.1695926989319605  LOG.old.1695927014345991  LOG.old.1695927041143633  LOG.old.1695927064671484  LOG.old.1695927073360611  MANIFEST-000034
