[package]
name = "carrion-eris"
version = "0.1.0"
edition = "2021"
readme = "CARGO.md"
authors = ["Michael Jaquier <michael.jaquier@nexthink.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
surrealdb = { version = "1.0.0", features = ["http", "kv-mem", "protocol-http", "kv-rocksdb"] }
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
thiserror = "1.0.40"
once_cell = "1.18.0"
poise = "0.5.6"
rand = "0.8.5"

[[bin]]
name = "server"
