[package]
name = "carrion-eris"
version = "0.1.0"
edition = "2021"
readme = "CARGO.md"
authors = ["Michael Jaquier <michael.jaquier@nexthink.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
surrealdb = { version = "1.0.0", features = [
    "http",
    "kv-mem",
    "protocol-http",
    "kv-rocksdb",
] }
tokio = { version = "1.31.0", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
thiserror = "1.0.40"
once_cell = "1.18.0"
poise = "0.5.6"
rand = "0.8.5"
eris-macro = { version = "0.1.0", path = "eris-macro" }
heck = { version = "0.4.1", features = [] }
serde_json = "1.0.107"
serde_yaml = { version = "0.9.25", features = [] }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
lazy_static = "1.4.0"
derive_builder = "0.12.0"
static-config = { path = "static-config" }
random_word = { version = "0.4.1", features = ["en"] }
regex = "1.10.2"
dashmap = { version = "5.5.3", features = ["serde"] }
async-trait = "0.1.74"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
futures-timer = "3.0.2"
anyhow = "1.0.75"

[[bin]]
name = "discord"
path = "src/bin/discord.rs"


[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dev-dependencies]
tempdir = "0.3.7"

[build-dependencies]
serde_yaml = "0.9.25"
serde = { version = "1.0.188", features = ["derive"] }
heck = "0.4.1"
static-config = { path = "static-config" }
