[package]
name = "eris-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
name = "eris_macro"

[dependencies]
convert_case = "0.6.0"
heck = "0.4.1"
proc-macro2 = "1.0.51"
quote = "1.0.23"
rand = "0.8"
syn = { version = "2.0.43", features = ["parsing", "extra-traits", "full"] }
proc-macro-error = "1.0.4"
