[package]
name = "static-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.9"
derive_builder = "0.12.0"
lazy_static = "1.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
walkdir = "2.4.0"
heck = "0.4.1"